<?xml version="1.0"?>
<package format="2">
  <name>Turtlebot_RRT_SLAM</name>
  <version>0.0.0</version>
  <description>The Trutlebot_RRT_SLAM package</description>

 <maintainer email="cptsai@terpmail.umd.edu">cptsai</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_core</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>base_local_planner</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>base_local_planner</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nav_core plugin="${prefix}/rrt_planner_plugin.xml" />
  </export>
</package>
